--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>0</td> <td title="&gt;&gt;Base.beforeSuite()[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>8</td> <td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass()[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod()[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Base.f(java.lang.Integer, java.lang.String)[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">f</td> 
-  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod()[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod()[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Base.f(java.lang.Integer, java.lang.String)[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">f</td> 
-  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod()[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>46</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>47</td> <td>&nbsp;</td><td title="&lt;&lt;Base.afterTest()[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="9dc88c">  <td>20/11/07 20:57:47</td>   <td>122</td> <td title="&lt;&lt;Base.afterSuite()[pri:0, instance:TestNGFramework.Framework.testing.Base@2b72cb8a]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>0</td> <td title="&gt;&gt;Base.beforeSuite()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>522</td> <td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>536</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
+<tr bgcolor="a9e4eb">  <td>20/11/07 21:47:34</td>   <td>555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.test(java.util.Hashtable)[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">test</td> 
+  <td>main@464064894</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>566</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>569</td> <td>&nbsp;</td><td title="&lt;&lt;Base.afterTest()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
+<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>599</td> <td title="&lt;&lt;Base.afterSuite()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
 </table>
