--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
-<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
-<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>33</td> <td title="&lt;&lt;Base.afterSuite()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
-<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>3</td> <td>&nbsp;</td><td title="&lt;&lt;Base.afterTest()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
-<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
-<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
-<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>-566</td> <td title="&gt;&gt;Base.beforeSuite()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
-<tr bgcolor="c2959f">  <td>20/11/07 21:47:34</td>   <td>-44</td> <td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@464064894</td>   <td></td> </tr>
-<tr bgcolor="a9e4eb">  <td>20/11/07 21:47:34</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.test(java.util.Hashtable)[pri:0, instance:TestNGFramework.Framework.testing.AppTest@6497b078]">test</td> 
-  <td>main@464064894</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>20/11/07 22:41:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@1f97cf0d]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@270095066</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>20/11/07 22:41:48</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@1f97cf0d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@270095066</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>20/11/07 22:41:48</td>   <td>26</td> <td title="&lt;&lt;Base.afterSuite()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@1f97cf0d]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@270095066</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>20/11/07 22:41:48</td>   <td>3</td> <td>&nbsp;</td><td title="&lt;&lt;Base.afterTest()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@1f97cf0d]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@270095066</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>20/11/07 22:41:48</td>   <td>-45</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@1f97cf0d]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@270095066</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>20/11/07 22:41:48</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod(java.lang.reflect.Method)[pri:0, instance:TestNGFramework.Framework.testing.AppTest@1f97cf0d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@270095066</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>20/11/07 22:41:47</td>   <td>-740</td> <td title="&gt;&gt;Base.beforeSuite()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@1f97cf0d]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@270095066</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>20/11/07 22:41:48</td>   <td>-60</td> <td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:TestNGFramework.Framework.testing.AppTest@1f97cf0d]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@270095066</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>20/11/07 22:41:48</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.test(java.util.Hashtable)[pri:0, instance:TestNGFramework.Framework.testing.AppTest@1f97cf0d]">test</td> 
+  <td>main@270095066</td>   <td></td> </tr>
 </table>
